# optimize_layouts

./: .gitignore  README.md  README_keyboard_application.md  README_keyboards.md  analyze_frequencies.py  analyze_global_moo_solutions.py  analyze_input.py  analyze_inputs.py  analyze_letters_layouts.py  analyze_results.py  auto_job_submitter.sh  calc.sh  calc_positions_items.sh  calculate_score.py  config.py  config.yaml  consolidate_moo.py  count_file_duplicates.py  count_files.sh  display.py  display_and_score_layout.py  filter_moo_layouts.py  find_duplicates.sh  find_phase2_candidates.py  find_phase2_candidates.yaml  generate_command.py  generate_configs1.py  generate_configs2.py  generate_keyboard_configs1.py  generate_keyboard_configs2.py  layouts_compare.py  layouts_consolidate.py  layouts_filter.py  layouts_filter_patterns.py  layouts_filter_scores.py  layouts_plot.py  list_slurm_outputs.sh  missing_check_output.sh  missing_prep_batches.sh  missing_submit_all_batches.sh  (+54 more)
input/: dummy-item-scores.csv  dummy-position-scores.csv  engram6_2key_scores.csv  engram6_3key_order_scores.csv  engram_2key_scores.csv  engram_3key_order_scores.csv  key_comfort_estimates.csv  key_pair_comfort_estimates.csv  keypair_engram7_scores.csv  keypair_scores_detailed.csv  letter_frequencies_english.csv  letter_pair_frequencies_english.csv  normalized_key_pair_comfort_scores_extended.csv  scores_2key_detailed.csv
keyboard_study/: README_keyboards.md  analyze_frequencies.py  compare_layouts.py  display_layout.py  display_layouts.py  generate_configs1.py  generate_configs2.py  (+3 more)
(+80 files in other folders)
